Fixed margin for the TABS of image upload modal to align with close button

--- a/src/styles/editor/_media-uploader.scss
+++ b/src/styles/editor/_media-uploader.scss
@@ -12,6 +12,7 @@
 
   .neeto-ui-tab__wrapper {
     padding: 0 16px;
+    margin-top: 1.2rem;
   }
 
   .ne-tab__wrapper {
